--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
 
             <h2>Contact</h2>
-            <p>contact@xinyu.no</p>
+            <p>contact@nanli.no</p>
         </div>
     </div>
 </body>
