--- a/index.html
+++ b/index.html
@@ -6,28 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>NanLi.no</title>
+    <title>Nan Li</title>
 </head>
 <body>
-    <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>Nan Li</h2>
-            <p>Norway</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="section-2">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
-
-            <h2>Contact</h2>
-            <p>contact@nanli.no</p>
+    <div id=home class="title bg-transparent bgstyle text-light d-flex align-content-center align-items-center flex-wrap m-0 jumbotron jumbotron-fluid" style="overflow:hidden;background:rgba(0,0,0,0) linear-gradient(136deg,rgb(68,132,206),rgb(26,215,192),rgb(255,155,17),rgb(155,89,182),rgb(255,127,127),rgb(236,240,241)) repeat scroll 0% 0% / 1200% 1200%">
+        <div id=stars></div>
+        <div class="text-center container">
+            <h1 class=display-1>Nan Li</h1>
+            <div class="Typist lead typist">a girl with fantasies</div>
+            <div class=p-5>
+                <a target=_blank rel="noopener noreferrer" aria-label="GitHub" href= ><i class="fab fa-github fa-3x socialicons"></i></a>
+                <a target=_blank rel="noopener noreferrer" aria-label="LinkedIn" href= ><i class="fab fa-linkedin fa-3x socialicons"></i></a>
+                <a target=_blank rel="noopener noreferrer" aria-label="Twitter" href= ><i class="fab fa-twitter fa-3x socialicons"></i></a>
+                <a target=_blank rel="noopener noreferrer" aria-label="Facebook" href= ><i class="fab fa-facebook fa-3x socialicons"></i></a>
+                <a target=_blank rel="noopener noreferrer" aria-label="Instagram" href= ><i class="fab fa-instagram fa-3x socialicons"></i></a>
+            </div>
+            <a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:contact@xinyu.no" target="_blank">Contact</a>
         </div>
     </div>
 </body>
