--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a target=_blank rel="noopener noreferrer" aria-label="Facebook" href= ><i class="fab fa-facebook fa-3x socialicons"></i></a>
                 <a target=_blank rel="noopener noreferrer" aria-label="Instagram" href= ><i class="fab fa-instagram fa-3x socialicons"></i></a>
             </div>
-            <a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:contact@xinyu.no" target="_blank">Contact</a>
+            <a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:contact@nanli.no" target="_blank">Contact</a>
         </div>
     </div>
 </body>
