--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>Nan Li</title>
 </head>
 <body>
-    <div id=home class="title bg-transparent bgstyle text-light d-flex align-content-center align-items-center flex-wrap m-0 jumbotron jumbotron-fluid" style="overflow:hidden;background:rgba(0,0,0,0) linear-gradient(136deg,rgb(68,132,206),rgb(26,215,192),rgb(255,155,17),rgb(155,89,182),rgb(255,127,127),rgb(236,240,241)) repeat scroll 0% 0% / 1200% 1200%">
-        <div id=stars></div>
-        <div class="text-center container">
-            <h1 class=display-1>Nan Li</h1>
-            <div class="Typist lead typist">a girl with fantasies</div>
-            <div class=p-5>
-                <a target=_blank rel="noopener noreferrer" aria-label="GitHub" href= ><i class="fab fa-github fa-3x socialicons"></i></a>
-                <a target=_blank rel="noopener noreferrer" aria-label="LinkedIn" href= ><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-                <a target=_blank rel="noopener noreferrer" aria-label="Twitter" href= ><i class="fab fa-twitter fa-3x socialicons"></i></a>
-                <a target=_blank rel="noopener noreferrer" aria-label="Facebook" href= ><i class="fab fa-facebook fa-3x socialicons"></i></a>
+    <div class="main">
+        <div id="stars"></div>
+        <div class="content-container">
+            <h1 class="header">Nan Li</h1>
+            <div class="describe">a girl with fantasies</div>
+            <div class="social">
+                <a target=_blank aria-label="GitHub" href= ><i class="fab fa-github social-icons"></i></a>
+                <a target=_blank aria-label="LinkedIn" href= ><i class="fab fa-linkedin social-icons"></i></a>
+                <a target=_blank aria-label="Twitter" href= ><i class="fab fa-twitter social-icons"></i></a>
+                <a target=_blank aria-label="Facebook" href= ><i class="fab fa-facebook social-icons"></i></a>
             </div>
-            <a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:contact@nanli.no" target="_blank">Contact</a>
+            <a class="btn btn-outline-light" aria-label="Contact" href="mailto:contact@nanli.no" target="_blank">Contact</a>
         </div>
     </div>
 </body>
